--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,21 +3,8 @@
   min-height: 100vh;
 }
 
-.navigation {
-  background-color: #b3c2bf;
-  min-width: 10vw;
-  * {
-    min-height: 30px;
-    background-color: #c0dfd9;
-    margin: 2px;
-  }
-  :hover {
-    cursor: pointer;
-  }
-}
-
 .page-container {
-  //background: #e9ece5;
+  background: #e1e8f0;
   min-width: 90vw;
-  margin-top: 20px;
+  padding-top: 20px;
 }
