--- a/client/src/components/navigation/index.scss
+++ b/client/src/components/navigation/index.scss
@@ -9,8 +9,13 @@
     text-transform: uppercase;
     background-color: #c0dfd9;
     margin: 2px;
+    transition: background-color 0.5s;
+    text-decoration: none;
+    font-weight: 600;
+    color: #EFF3F8;
   }
   :hover {
     cursor: pointer;
+    background-color: #9068be;
   }
 }
